# drf_prac_todo

./: .gitignore  manage.py  pyproject.toml
drf_prac_todo/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  login.html  signup.html  user_info.html
frontend/static/js/: index.js  login.js  refresh.js  signup.js  user_info.js
todolists/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolists/migrations/: 0001_initial.py  0002_alter_todolist_user_id.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
